--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
-Game Tasks:
-	- Setting turn order:
-		- Player who starts the game, is the one who determines the turn order
-		- The turn order is shared across the other players
-		- UI changes the turn order based on the turn order object
+Game Tasks:	
+	- Creating Card Objects
+	- Game service handling game state
+	- Game service also counting rounds
 	- Playing card round:
 		- TBD
 	- Betting round:
@@ -22,16 +21,11 @@ Networking Tasks:
 	- Leaving a game room
 	
 Other tasks:
-	- 
-To Create Items:
-	- To create a task, type a dash followed by a space.
-	- To create a project, type a line ending with a colon.
-	- To create a tag, type '@' followed by the tag’s name.
-To Organize Items:
-	- To indent items press the Tab key.
-	- To un-indent items press Shift-Tab.
-	- To mark a task done click leading dash.
-To Fold, Focus, and Filter Items:
-	- To fold/unfold an item click the dot to the left of the item.
-	- To focus on a single project select it in the sidebar.
-	- To filter your list enter a search in the toolbar search field.
+	- Create UI 
+	- Create UI Assets:
+		- Disks/Card stacks
+		- Disk turning over animation
+		- Disk front and back design
+			- Also making it unique for each player
+	- Create tutorial prompts?
+		
